--- a/index.html
+++ b/index.html
@@ -355,6 +355,48 @@
         animation: pulse-dot 1.5s cubic-bezier(0.4, 0, 0.6, 1) infinite;
       }
 
+      /* === Favorite Animation === */
+      @keyframes star-pop {
+          0% { transform: scale(1); }
+          50% { transform: scale(1.6); }
+          100% { transform: scale(1); }
+      }
+      .animate-star-pop {
+          animation: star-pop 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+          transform-origin: center;
+      }
+
+      .particle-burst {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          pointer-events: none;
+      }
+      .particle-burst > .particle {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          color: #facc15; /* yellow-400 */
+          opacity: 0;
+          will-change: transform, opacity;
+      }
+      .particle-burst > .particle.animate {
+          animation: burst 0.6s ease-out forwards;
+      }
+
+      @keyframes burst {
+          0% {
+              transform: translate(-50%, -50%) scale(0.5);
+              opacity: 1;
+          }
+          100% {
+              transform: translate(var(--tx), var(--ty)) scale(0);
+              opacity: 0;
+          }
+      }
+
       /* === Custom Scrollbar === */
       .custom-scrollbar::-webkit-scrollbar {
         width: 8px;
